--- a/Pages/AboutPage.xaml
+++ b/Pages/AboutPage.xaml
@@ -28,50 +28,49 @@
     <ui:SimpleStackPanel>
         <Label Content="About" Style="{StaticResource PageTitle}"/>
         <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="160"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <Label Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}" Content="Version: "
-                       Margin="0,0,0,3"/>
-                <Label Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelStyle}" Content="Spicetify Version: "
-                       Margin="0,0,0,3"/>
-                <ui:SimpleStackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal" Spacing="11">
-                    <Label x:Name="AppVersionLabel" Style="{StaticResource VersionStyle}" Content="0.0.0"/>
-                    <Label x:Name="AppVersionStateLabel" Style="{StaticResource LabelStyle}" FontSize="15" Content=""/>
-                </ui:SimpleStackPanel>
-                <ui:SimpleStackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Spacing="11">
-                    <Label x:Name="SpicetifyVersionLabel" Style="{StaticResource VersionStyle}" Content="0.0.0"/>
-                    <Label x:Name="SpicetifyVersionStateLabel" Style="{StaticResource LabelStyle}" FontSize="15"
-                           Content=""/>
-                </ui:SimpleStackPanel>
-            </Grid>
-            <Grid Margin="0,13,0,0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="160"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <Label Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}" Content="GitHub: "/>
-                <Label Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelStyle}" Content="Bug Report: "/>
-                <Label Grid.Column="0" Grid.Row="2" Style="{StaticResource LabelStyle}" Content="Spicetify: "/>
-                <ui:HyperlinkButton Grid.Column="1" Grid.Row="0" Style="{StaticResource HyperlinkStyle}"
-                                    Content="github.com/AdotBdot/SpicetifyManager"
-                                    NavigateUri="https://github.com/AdotBdot/SpicetifyManager"/>
-                <ui:HyperlinkButton Grid.Column="1" Grid.Row="1" Style="{StaticResource HyperlinkStyle}"
-                                    Content="github.com/AdotBdot/SpicetifyManager/issues"
-                                    NavigateUri="https://github.com/AdotBdot/SpicetifyManager/issues"/>
-                <ui:HyperlinkButton Grid.Column="1" Grid.Row="2" Style="{StaticResource HyperlinkStyle}"
-                                    Content="spicetify.app" NavigateUri="https://spicetify.app/"/>
-            </Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="160"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}" Content="Version: "
+                   Margin="0,0,0,3"/>
+            <Label Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelStyle}" Content="Spicetify Version: "
+                   Margin="0,0,0,3"/>
+            <ui:SimpleStackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal" Spacing="11">
+                <Label x:Name="AppVersionLabel" Style="{StaticResource VersionStyle}" Content="0.0.0"/>
+                <Label x:Name="AppVersionStateLabel" Style="{StaticResource LabelStyle}" FontSize="15" Content=""/>
+            </ui:SimpleStackPanel>
+            <ui:SimpleStackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" Spacing="11">
+                <Label x:Name="SpicetifyVersionLabel" Style="{StaticResource VersionStyle}" Content="0.0.0"/>
+                <Label x:Name="SpicetifyVersionStateLabel" Style="{StaticResource LabelStyle}" FontSize="15" Content=""/>
+            </ui:SimpleStackPanel>
+        </Grid>
+        <Grid Margin="0,13,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="160"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelStyle}" Content="GitHub: "/>
+            <Label Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelStyle}" Content="Bug Report: "/>
+            <Label Grid.Column="0" Grid.Row="2" Style="{StaticResource LabelStyle}" Content="Spicetify: "/>
+            <ui:HyperlinkButton Grid.Column="1" Grid.Row="0" Style="{StaticResource HyperlinkStyle}"
+                                Content="github.com/AdotBdot/SpicetifyManager"
+                                NavigateUri="https://github.com/AdotBdot/SpicetifyManager"/>
+            <ui:HyperlinkButton Grid.Column="1" Grid.Row="1" Style="{StaticResource HyperlinkStyle}"
+                                Content="github.com/AdotBdot/SpicetifyManager/issues"
+                                NavigateUri="https://github.com/AdotBdot/SpicetifyManager/issues"/>
+            <ui:HyperlinkButton Grid.Column="1" Grid.Row="2" Style="{StaticResource HyperlinkStyle}"
+                                Content="spicetify.app" NavigateUri="https://spicetify.app/"/>
+        </Grid>
         <Button x:Name="CheckVersionBtn" Width="Auto" Margin="0,11,0,0" Content="Check Versions"
                 Click="CheckVersionBtn_OnClick" Style="{StaticResource ButtonStyle}"/>
     </ui:SimpleStackPanel>
