--- a/Pages/LogsPage.xaml
+++ b/Pages/LogsPage.xaml
@@ -7,7 +7,9 @@
         <Label Content="Logs" Style="{StaticResource PageTitle}"/>
         <Border Margin="0,9,0,0" Background="#141414" CornerRadius="5">
             <TextBox x:Name="LogBox" IsReadOnly="True" TextWrapping="Wrap" Style="{StaticResource TextBoxStyle}"
-                     Text="" Height="340" VerticalScrollBarVisibility="Hidden" TextChanged="LogBox_TextChanged"/>
+                     Text="" Height="330" VerticalScrollBarVisibility="Hidden" TextChanged="LogBox_TextChanged"/>
         </Border>
+        <Button x:Name="ClearLogsBtn" Width="60" Height="30" Margin="0,11,0,0" Content="Clear"
+                Click="ClearLogsBtn_OnClick" Style="{StaticResource ButtonStyle}"/>
     </ui:SimpleStackPanel>
 </ui:Page>
