--- a/Pages/LogsPage.xaml
+++ b/Pages/LogsPage.xaml
@@ -5,8 +5,8 @@
          mc:Ignorable="d" d:DesignHeight="438" d:DesignWidth="700" Title="LogsPage">
     <ui:SimpleStackPanel>
         <Label Content="Logs" Style="{StaticResource PageTitle}"/>
-        <Border Margin="0,9,0,0" Background="#141414" CornerRadius="5">
-            <TextBox x:Name="LogBox" IsReadOnly="True" TextWrapping="Wrap" Style="{StaticResource TextBoxStyle}"
+        <Border Margin="0,9,0,0" Background="{StaticResource BgDarkBrush}" CornerRadius="5">
+            <TextBox x:Name="LogBox" IsReadOnly="True" TextWrapping="Wrap" Style="{StaticResource TextBoxStyle}" BorderBrush="{StaticResource BorderBrush}"
                      Text="" Height="340" VerticalScrollBarVisibility="Hidden" TextChanged="LogBox_TextChanged"/>
         </Border>
         <Button x:Name="ClearLogsBtn" Width="77" Height="30" Margin="0,5,0,0" HorizontalAlignment="Left" Content="Clear"
