BackgroundBright name and color

--- a/Styles/Brushes.xaml
+++ b/Styles/Brushes.xaml
@@ -4,7 +4,7 @@
     <Color x:Key="Primary">#E8493D</Color>
     <Color x:Key="Secondary">#F79126</Color>
     <Color x:Key="Background">#141414</Color>
-    <Color x:Key="Border">#444444</Color>
+    <Color x:Key="BackgroundBright">#2b2b2b</Color>
     <!--Brushes-->
     <LinearGradientBrush x:Key="BgBrush" StartPoint="0,1" EndPoint="1,0">
         <GradientStop Color="{StaticResource Primary}" Offset="0"/>
@@ -19,5 +19,5 @@
     <SolidColorBrush x:Key="PrimarySolid" Color="{StaticResource Primary}"/>
     <SolidColorBrush x:Key="SecondarySolid" Color="{StaticResource Secondary}"/>
     <SolidColorBrush x:Key="BgDarkBrush" Color="{StaticResource Background}"/>
-    <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource Border}"/>
+    <SolidColorBrush x:Key="BorderBrush" Color="{StaticResource BackgroundBright}"/>
 </ResourceDictionary>
