--- a/Pages/ManagePage.xaml
+++ b/Pages/ManagePage.xaml
@@ -5,7 +5,7 @@
          mc:Ignorable="d" d:DesignHeight="438" d:DesignWidth="700" Title="ManagePage">
     <ui:SimpleStackPanel Spacing="11">
         <Label Content="Manage" Style="{StaticResource PageTitle}"/>
-        <ui:DropDownButton x:Name="UpgradeBtn" Width="140" Height="40" Margin="0,0,17,0" Content="Upgrade"
+        <ui:DropDownButton x:Name="UpgradeBtn" Width="140" Height="40" Content="Upgrade"
                            Style="{StaticResource DropDownButtonStyle}">
             <ui:DropDownButton.Flyout>
                 <ui:MenuFlyout>
@@ -14,13 +14,13 @@
                 </ui:MenuFlyout>
             </ui:DropDownButton.Flyout>
         </ui:DropDownButton>
-        <Button x:Name="RestartBtn" Width="140" Height="40" Margin="0,0,17,0" Content="Restart Spotify"
-                Click="RestartBtn_OnClick" Style="{StaticResource ButtonStyle}"/>
-        <Button x:Name="BackupBtn" Width="140" Height="40" Margin="0,0,17,0" Content="Backup" Click="BackupBtn_OnClick"
+        <Button x:Name="RestartBtn" Width="140" Height="40" Content="Restart Spotify" Click="RestartBtn_OnClick"
                 Style="{StaticResource ButtonStyle}"/>
-        <Button x:Name="ClearBtn" Width="140" Height="40" Margin="0,0,17,0" Content="Clear Backup"
-                Click="ClearBtn_OnClick" Style="{StaticResource ButtonStyle}"/>
-        <Button x:Name="RestoreBtn" Width="140" Height="40" Margin="0,0,17,0" Content="Restore Spotify"
-                Click="RestoreBtn_OnClick" Style="{StaticResource ButtonStyle}"/>
+        <Button x:Name="BackupBtn" Width="140" Height="40" Content="Backup" Click="BackupBtn_OnClick"
+                Style="{StaticResource ButtonStyle}"/>
+        <Button x:Name="ClearBtn" Width="140" Height="40" Content="Clear Backup" Click="ClearBtn_OnClick"
+                Style="{StaticResource ButtonStyle}"/>
+        <Button x:Name="RestoreBtn" Width="140" Height="40" Content="Restore Spotify" Click="RestoreBtn_OnClick"
+                Style="{StaticResource ButtonStyle}"/>
     </ui:SimpleStackPanel>
 </ui:Page>
