--- a/Pages/LogsPage.xaml
+++ b/Pages/LogsPage.xaml
@@ -6,10 +6,10 @@
     <ui:SimpleStackPanel>
         <Label Content="Logs" Style="{StaticResource PageTitle}"/>
         <Border Margin="0,9,0,0" Background="{StaticResource BgDarkBrush}" CornerRadius="5">
-            <TextBox x:Name="LogBox" IsReadOnly="True" TextWrapping="Wrap" Style="{StaticResource TextBoxStyle}" BorderBrush="{StaticResource BorderBrush}"
+            <TextBox x:Name="LogBox" IsReadOnly="True" TextWrapping="Wrap" Style="{StaticResource TextBoxStyle}" Background="{StaticResource BgDarkBrush}" BorderBrush="{StaticResource BorderBrush}"
                      Text="" Height="340" VerticalScrollBarVisibility="Hidden" TextChanged="LogBox_TextChanged"/>
         </Border>
-        <Button x:Name="ClearLogsBtn" Width="77" Height="30" Margin="0,5,0,0" HorizontalAlignment="Left" Content="Clear"
+        <Button x:Name="ClearLogsBtn" Width="77" Height="30" Margin="0,5,0,0" Content="Clear"
                 Click="ClearLogsBtn_OnClick" Style="{StaticResource ButtonStyle}"/>
     </ui:SimpleStackPanel>
 </ui:Page>
