--- a/Pages/SpicetifyNotDetectedPage.xaml
+++ b/Pages/SpicetifyNotDetectedPage.xaml
@@ -6,7 +6,7 @@
          mc:Ignorable="d" d:DesignHeight="438" d:DesignWidth="700">
     <ui:SimpleStackPanel>
         <Label Content="Spicetify Not Detected" Style="{StaticResource PageTitle}"/>
-        <TextBlock FontSize="14">
+        <TextBlock FontSize="14" Foreground="White">
             Install Spicetify from here:
             <Hyperlink NavigateUri="https://spicetify.app/docs/getting-started">spicetify.app/docs/getting-started</Hyperlink>
             and restart application.
